src/test/deca/context/invalid/provided/class9.deca
class A {}
{
    int a = new Integer();
}